@@ -1,5 +1,9 @@
 Release Candidate 2
 ===================
+- Added more ctor overloads to ProjectionQuery, since CSC doesn't play nice with implicit operators and params declaration.
+
+- Moved ProjectionQuery and ScalarProjectionQuery to Castle.ActiveRecord.Queries, with the rest of the queries.
+
 - Added untyped projection support, using just ProjectionQuery<Post>, which uses object[] tuples.
 
 - Added real projection support, which allows the following code:
